--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
     <main>
       <div class="moon-container">
-        <div class="moon"></div>
+        <div class="moon" id="sun"></div>
       </div>
       <h1>Ian Lowe</h1>
       <div class="bio">Student, Software Developer, Dog-dad</div>
