--- a/index.html
+++ b/index.html
@@ -8,29 +8,39 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Tajawal:wght@300&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://use.typekit.net/hvd6vmg.css" />
     <title>Ian Lowe - Portfolio</title>
   </head>
   <body>
-    <header>
-      <div class="links"><a href="./resume.pdf" target="_blank">resume</a></div>
-      <div class="links">
-        <a href="https://github.com/ian-lowe" target="_blank">github</a>
-      </div>
-      <div class="links">
-        <a
-          href="https://www.linkedin.com/in/ian-lowe-18b163180/"
-          target="_blank"
-          >linkedin</a
-        >
-      </div>
-    </header>
-    <main>
-      <div class="moon-container">
-        <div class="moon" id="sun"></div>
-      </div>
-      <h1>Ian Lowe</h1>
-      <div class="bio">Student, Software Developer, Dog-dad</div>
-    </main>
+    <div class="body-border">
+      <header>
+        <div class="mode-container">
+          <input type="checkbox" id="mode" /><label for="mode">Toggle</label>
+        </div>
+        <div class="links-container">
+          <div class="links">
+            <a href="./resume.pdf" target="_blank">resume</a>
+          </div>
+          <div class="links">
+            <a href="https://github.com/ian-lowe" target="_blank">github</a>
+          </div>
+          <div class="links">
+            <a
+              href="https://www.linkedin.com/in/ian-lowe-18b163180/"
+              target="_blank"
+              >linkedin</a
+            >
+          </div>
+        </div>
+      </header>
+      <main>
+        <!-- <div class="moon-container">
+          <div class="moon" id="sun"></div>
+        </div> -->
+        <h1>IAN LOWE</h1>
+        <div class="bio">Software Developer</div>
+      </main>
+    </div>
     <script src="./scripts.js"></script>
   </body>
 </html>
