--- a/index.html
+++ b/index.html
@@ -38,7 +38,12 @@
           <div class="moon" id="sun"></div>
         </div> -->
         <h1>IAN LOWE</h1>
-        <div class="bio">Software Developer</div>
+        <div class="bio-container">
+          <div class="bio" id="bio">
+            Software Developer
+          </div>
+          <span class="blinking-cursor">|</span>
+        </div>
       </main>
     </div>
     <script src="./scripts.js"></script>
